# rag-llm

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
playground/: main.ipynb
playground/qdrant/: example.py
playground/weaviate/: main.ipynb  task1_dataset.ipynb  tasks.md
